# Firmware

./: .gitmodules
mavlink/files_to_replace/common/: mavlink_msg_hil_state_quaternion.h
mavlink/files_to_replace/message_definitions/: common.xml
msg/: CMakeLists.txt  commander_state.msg  emergency.msg  vehicle_command.msg  vehicle_status_flags.msg
src/drivers/pwm_out_sim/: PWMSim.cpp  PWMSim.hpp
src/lib/FlightTasks/: CMakeLists.txt
src/lib/FlightTasks/tasks/EmergencyLanding/: CMakeLists.txt  FlightTaskEmergencyLanding.cpp  FlightTaskEmergencyLanding.hpp
src/lib/mixer/: mixer.h  mixer_group.cpp  mixer_multirotor.cpp
src/modules/commander/: Commander.cpp  state_machine_helper.cpp
src/modules/mc_att_control/: mc_att_control.hpp  mc_att_control_main.cpp
src/modules/mc_att_control/EmergencyAttitudeControl/: CMakeLists.txt  EmergencyAttitudeControl.cpp  EmergencyAttitudeControl.h  LQRController.cpp  LQRController.h  lqr.h  polynomial.h  solver.cpp  solver.h
src/modules/mc_att_control/EmergencyAttitudeControl/test/: main.cpp  tests.cpp  tests.h
src/modules/mc_att_control/solver/: CMakeLists.txt  main.cpp  plynomial_tests.cpp
src/modules/mc_pos_control/: mc_pos_control_main.cpp
src/modules/simulator/: simulator.h  simulator_mavlink.cpp
test/: rostest_avoidance_run.sh
